--- a/src/app/credits/credits.component.html
+++ b/src/app/credits/credits.component.html
@@ -6,7 +6,7 @@
 
     <div class="card"
     *ngIf="isSidebarOpen"
-    style="width: 10%;">
+    style="width: 150px;">
         <div class="card-header">
           Credits
         </div>
