Deploy aggiornamento credits

--- a/src/app/credits/credits.component.html
+++ b/src/app/credits/credits.component.html
@@ -13,7 +13,8 @@
         <div class="card-body"
         style="text-align: center;"
         >
-        I wanted to learn how to use Firebase so I made this project following <a href="https://www.youtube.com/watch?v=kzl4IKAC8O4">this</a> tutorial.<br>
+        I wanted to learn how to use Firebase so I made this project using Angular, Bootstrap and Firebase.<br>
+        Work in progress.
         <a href="https://github.com/chiaraferrara"><img src="https://github.com/chiaraferrara/StudioGhibli/blob/56946933e0f028998ef3a97e6adc07c49962933c/src/app/img/github.png?raw=true" style= "width: 40px;"></a>
         <a href="https://angular.io/"><img src="https://github.com/chiaraferrara/StudioGhibli/blob/9140d4e3e77cdd0f757b9ede021bbbd650e7eada/src/app/img/angular_solidBlack.png?raw=true" style="width: 50px;"></a>
         </div>
